# wiki

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.vitepress/: config.mts
sources/: index.md
sources/AWS/Account security/: IAM Anywhere.md  IAM policies.md  IAM roles.md  IAM user groups.md  Identity and Access Management.md
sources/AWS/Lexique/: CIDR.md  Edge locations.md  Local zones.md
sources/AWS/Network/: Route table.md  VPC.md
sources/Cloud/: Kubernetes.md
sources/Formation Gitlab CICD/: Programme.md
sources/Formation Gitlab CICD/Jour 1/: 1. Qu'est-ce qu'une chaine de CICD ?.md  2. Architecture de base des pipelines Gitlab CICD.md  Déroulé.md
sources/Formation Gitlab CICD/Jour 2/: 0. Sommaire.md  1. Architecture avancée.md  4. Gitlab Saas vs self-hosted, CE vs EE.md
sources/Formation Gitlab CICD/Notes/: Gitlab runners and executors.md  Summary.md
sources/Homelab/: Samba.md
sources/Homelab/Proxmox/: TLS.md
sources/Misc/: Bash.md  GitHub Actions.md  PostgreSQL.md  Python.md  Vim.md
sources/Misc/Docker/: Docker build mounts.md
sources/Misc/Python/: Misc.md
sources/SSL/: Public Key Infrastructure.md  SSL file formats.md
sources/Wiki/AWS/Account security/: IAM users.md  STS.md  (+2 more)
sources/Wiki/Cloud/: Kubernetes.md
sources/Wiki/Homelab/: Gitlab.md  Samba.md
sources/Wiki/Misc/: Bash.md  Docker.md  Git.md  SSL.md  Vault.md  Vim.md
templates/: base.md.j2  index-glossary.md.j2  index.md.j2  index.md.j2.old  root-index.md.j2
(+31 files in other folders)
