[tool.poetry]
name = "vitepress"
version = "0.1.0"
description = ""
authors = ["bastantoine <bastien.antoine69+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.0.0"
python-slugify = "^8.0.1"
typer = {extras = ["all"], version = "^0.9.0"}
loguru = "^0.7.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
